# mouse-scroll-wheel-acceleration-userspace

./: .gitignore  LICENSE  README.md  common.py  install-daemon.py  main.py  main.sh  pyproject.toml  requirements.txt  requires.txt  setup.sh  vec2.py
src/mswaa/: __init__.py  __main__.py  common.py  vec2.py
